; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdi.c_TdiQueryDeviceControl.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/afd/afd/extr_tdi.c_TdiQueryDeviceControl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@MIN_TRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Bad file object.\0A\00", align 1
@STATUS_INVALID_PARAMETER = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"Bad device object.\0A\00", align 1
@NotificationEvent = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@STATUS_INSUFFICIENT_RESOURCES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TdiQueryDeviceControl(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_4__, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %21 = load i32, i32* %9, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %27, label %23

23:                                               ; preds = %7
  %24 = load i32, i32* @MIN_TRACE, align 4
  %25 = call i32 @AFD_DbgPrint(i32 %24, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %26 = load i32, i32* @STATUS_INVALID_PARAMETER, align 4
  store i32 %26, i32* %8, align 4
  br label %64

27:                                               ; preds = %7
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @IoGetRelatedDeviceObject(i32 %28)
  store i32 %29, i32* %16, align 4
  %30 = load i32, i32* %16, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %36, label %32

32:                                               ; preds = %27
  %33 = load i32, i32* @MIN_TRACE, align 4
  %34 = call i32 @AFD_DbgPrint(i32 %33, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %35 = load i32, i32* @STATUS_INVALID_PARAMETER, align 4
  store i32 %35, i32* %8, align 4
  br label %64

36:                                               ; preds = %27
  %37 = load i32, i32* @NotificationEvent, align 4
  %38 = load i32, i32* @FALSE, align 4
  %39 = call i32 @KeInitializeEvent(i32* %19, i32 %37, i32 %38)
  %40 = load i32, i32* %10, align 4
  %41 = load i32, i32* %16, align 4
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %13, align 4
  %45 = load i32, i32* %14, align 4
  %46 = load i32, i32* @FALSE, align 4
  %47 = call i32 @IoBuildDeviceIoControlRequest(i32 %40, i32 %41, i32 %42, i32 %43, i32 %44, i32 %45, i32 %46, i32* %19, %struct.TYPE_4__* %17)
  store i32 %47, i32* %20, align 4
  %48 = load i32, i32* %20, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %52, label %50

50:                                               ; preds = %36
  %51 = load i32, i32* @STATUS_INSUFFICIENT_RESOURCES, align 4
  store i32 %51, i32* %8, align 4
  br label %64

52:                                               ; preds = %36
  %53 = load i32, i32* %20, align 4
  %54 = load i32, i32* %16, align 4
  %55 = call i32 @TdiCall(i32 %53, i32 %54, i32* %19, %struct.TYPE_4__* %17)
  store i32 %55, i32* %18, align 4
  %56 = load i32*, i32** %15, align 8
  %57 = icmp ne i32* %56, null
  br i1 %57, label %58, label %62

58:                                               ; preds = %52
  %59 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = load i32*, i32** %15, align 8
  store i32 %60, i32* %61, align 4
  br label %62

62:                                               ; preds = %58, %52
  %63 = load i32, i32* %18, align 4
  store i32 %63, i32* %8, align 4
  br label %64

64:                                               ; preds = %62, %50, %32, %23
  %65 = load i32, i32* %8, align 4
  ret i32 %65
}

declare dso_local i32 @AFD_DbgPrint(i32, i8*) #1

declare dso_local i32 @IoGetRelatedDeviceObject(i32) #1

declare dso_local i32 @KeInitializeEvent(i32*, i32, i32) #1

declare dso_local i32 @IoBuildDeviceIoControlRequest(i32, i32, i32, i32, i32, i32, i32, i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @TdiCall(i32, i32, i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
